--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,7 @@
 @import "components.art";
 @import "components.buttons";
 @import "components.courses";
+@import "components.cta";
 @import "components.discover";
 @import "components.footer";
 @import "components.header";
