--- a/_sass/components.meta.scss
+++ b/_sass/components.meta.scss
@@ -1,23 +1,19 @@
-$meta__row-border: 1px solid rgba($light, 0.35);
+$meta__row-border: 1px solid rgba($brand, 0.35);
 
 .meta {
     position: relative;
-    padding: $double-gutter 0;
+    padding: $gutter 0 $double-gutter;
     font-size: calculate-rem(18px);
-    color: $light;
-    background-color: $brand;
+    color: $brand;
     border-bottom: 1px solid rgba($light, 0.15);
 
     @include sm {
-        padding: $triple-gutter 0;
+        padding: $double-gutter 0;
         font-size: calculate-rem(24px);
     }
 
-    @include md {
-        padding: 128px 0;
-    }
-
-    @include lg {   
+    @include lg { 
+        padding: $triple-gutter 0;  
         font-size: calculate-rem(32px);
     }
 }
