--- a/_sass/elements.base.scss
+++ b/_sass/elements.base.scss
@@ -43,5 +43,5 @@ input:visited {
     outline: none;
     transition: $fade-all;
     font-family: $sans-serif;
-    border-radius: none;
+    border-radius: 0;
 }
