major update / refactor

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,5 +1,5 @@
 <section class="meta">
-    <div class="container container--small">
+    <div class="container container--m">
         <div class="meta__container">
             <div class="meta__row">
                 <p class="meta__data-label">aantal</p>
