--- a/_includes/related.html
+++ b/_includes/related.html
@@ -13,7 +13,7 @@
 {% if category.size > 1 %}
 <section class="courses pt-0">
     <div class="courses__container">
-        <div class="container container--small">
+        <div class="container container--m">
             <section class="courses__category">
                 <h2 class="courses__category-title">meer cursussen voor {{ page.category }}</h2>
                 <div class="courses__grid">
