--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,14 @@ layout: default
 ---
 
 <section class="post">
-    <div class="container container--small">
-        <header class="post__header">
-            <h1 class="post__title">{{ page.title }}</h1>
-        </header>
-        <div class="post__content">
-            {{ content }}
+    <div class="container">
+        <div class="post__container">
+            <header class="post__header">
+                <h1 class="post__title">{{ page.title }}</h1>
+            </header>
+            <div class="post__content">
+                {{ content }}
+            </div>
         </div>
     </div>
     <div class="container">
