--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,6 +34,7 @@
 @import "components.proof";
 @import "components.section-header";
 @import "components.signup";
+@import "components.thanks";
 @import "components.tile";
 
 // Utilities
