--- a/_sass/components.buttons.scss
+++ b/_sass/components.buttons.scss
@@ -1,6 +1,7 @@
 // buttons
 // --------------------------------------------------
 .button {
+    display: inline-block;
     border-radius: 2px;
     padding: 9px 12px 12px;
     transition: $fade-link;
