--- a/_sass/components.pattern.scss
+++ b/_sass/components.pattern.scss
@@ -4,7 +4,7 @@
     position: relative;
     background-color: $brand;
     color: $light;
-    padding: $double-gutter 0 $triple-gutter;
+    padding: $double-gutter 0;
 
     @include md {
         padding: 240px 0;
