--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,9 @@
 
     <main class="app">
         {% include header.html %}
-        {{ content }}
+        <div class="content">
+            {{ content }}
+        </div>
         {% include footer.html %}
     </main>
 
