--- a/_sass/objects.layout.scss
+++ b/_sass/objects.layout.scss
@@ -1,3 +1,13 @@
+.app {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.content {
+    flex: 1 0 auto;
+}
+
 .container {
     padding: 0 $gutter;
     @include md {
