#fix button margin on top

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,14 +1,14 @@
 <section class="cta">
     <div class="container container--s">
-        <header class="cta__header">
+        <header>
             <label class="cta__label">schrijf je in voor:</label>
             <h3 class="cta__title">{{ page.title }}</h3>
-            <p class="cta__description">
+            <p class="cta__description mb-6">
                 de inschrijving is vrijblijvend en je kan altijd weer annuleren
             </p>
+            <a href="/inschrijven" class="button button--l js-cta" course="{{ page.title }}">
+                ja ik wil inschrijven
+            </a>
         </header>
-        <a href="/inschrijven" class="button button--l js-cta" course="{{ page.title }}">
-            ja ik wil inschrijven
-        </a>
     </div>
 </section>
