major update | different stuff

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -6,7 +6,7 @@
             <p class="cta__description mb-6">
                 de inschrijving is vrijblijvend en je kan altijd weer annuleren
             </p>
-            <a href="/inschrijven" class="button button--l js-cta" course="{{ page.title }}">
+            <a href="/inschrijven" class="button button--l">
                 ja ik wil inschrijven
             </a>
         </header>
