--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -6,6 +6,6 @@
     <div class="tile__txt">
         <div class="tile__amount">{{ entry.amount }}</div>
         <p class="tile__description">{{ entry.description }}</p>
-        <div class="tile__price">{{ entry.price }}</div>
+        <div class="tile__time">{{ entry.time }}</div>
     </div>
 </a>
