--- a/_sass/components.buttons.scss
+++ b/_sass/components.buttons.scss
@@ -35,6 +35,11 @@
         color: $brand;
     }
 
+    @media (max-width: 359px) {
+        border: none !important;
+        padding: initial;
+    }
+
     @include lg {
         border: 1px solid $brand;
         color: $brand;
