--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,32 +1,14 @@
 <section class="meta">
     <div class="container container--m">
         <div class="meta__container">
-            <div class="meta__row">
-                <p class="meta__data-label">aantal</p>
-                <p class="meta__data-entry">{{ page.amount }}</p>
-            </div>
-            <div class="meta__row">
-                <p class="meta__data-label">prijs</p>
-                <p class="meta__data-entry">{{ page.price }}</p>
-            </div>
+            {% include meta__row.html label='aantal' entry='amount' %}
+            {% include meta__row.html label='prijs' entry='price' %}
             {% if page.inc %}
-            <div class="meta__row">
-                <p class="meta__data-label">inclusief</p>
-                <p class="meta__data-entry">{{ page.inc }}</p>
-            </div>
+                {% include meta__row.html label='inclusief' entry='inc' %}
             {% endif %}
-            <div class="meta__row">
-                <p class="meta__data-label">start</p>
-                <p class="meta__data-entry">{{ page.start }}</p>
-            </div>
-            <div class="meta__row">
-                <p class="meta__data-label">tijdstip</p>
-                <p class="meta__data-entry">{{ page.time }}</p>
-            </div>
-            <div class="meta__row">
-                <p class="meta__data-label">locatie</p>
-                <p class="meta__data-entry">{{ page.location }}</p>
-            </div>
+            {% include meta__row.html label='start' entry='start' %}
+            {% include meta__row.html label='tijdstip' entry='time' %}
+            {% include meta__row.html label='locatie' entry='location' %}
         </div>
     </div>
 </section>
