--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,9 @@ layout: default
     <div class="container">
         <div class="post__container">
             <header class="post__header">
-                <h1 class="post__title">{{ page.title }}</h1>
+                <h1 class="post__title js-set-course-data" id="course-title">
+                    {{ page.title }}
+                </h1>
             </header>
             <div class="post__content">
                 {{ content }}
