--- a/_sass/components.courses.scss
+++ b/_sass/components.courses.scss
@@ -7,6 +7,10 @@
 .courses__title {
     @include font(60px, 900, $lh-title);
 
+    @media (max-width: 359px) {
+        font-size: calculate-rem(56px);
+    }
+
     @include sm {
         font-size: calculate-rem(90px);
     }
