--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -57,7 +57,7 @@ $lh-solid: 1;
 $black: #000;
 $white: #fff;
 
-$brand: #7500AE;
+$brand: #780080;
 $brand-dark: mix($black, $brand, 15%);
 
 $cta: #009FEA;
