removed time on tile.html

--- a/_sass/components.tile.scss
+++ b/_sass/components.tile.scss
@@ -42,7 +42,7 @@
 }
 
 .tile__description {
-    margin-bottom: $gutter;
+    //margin-bottom: $gutter;
     font-family: serif;
     @include font(16px, normal, $lh-copy);
     color: $grey-2;
