--- a/_includes/meta__row.html
+++ b/_includes/meta__row.html
@@ -1,6 +1,6 @@
 <div class="meta__row">
     <p class="meta__data-label">{{ include.label }}</p>
-    <p class="meta__data-entry js-set-course-data" id="course-{{ include.entry }}">
+    <p class="meta__data-entry js-set-data" id="course-{{ include.entry }}">
         {% capture entry %}{{ include.entry }}{% endcapture %}
         {{ page[entry] }}
     </p>
