--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,7 @@
 @import "objects.layout";
 
 // Components
+@import "components.about";
 @import "components.art";
 @import "components.buttons";
 @import "components.courses";
