add google maps

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,7 @@
 @import "components.footer";
 @import "components.header";
 @import "components.intro";
+@import "components.map";
 @import "components.member";
 @import "components.meta";
 @import "components.misc";
