--- a/_sass/components.map.scss
+++ b/_sass/components.map.scss
@@ -3,3 +3,40 @@
     height: calc(100% + 24px);
     background-color: $brand;
 }
+
+.map__controls {
+    position: fixed;
+    bottom: $gutter;
+    right: $gutter;
+    box-shadow: $box-shadow-medium;
+}
+
+.map__zoom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: $double-gutter;
+    height: $double-gutter;
+    background-color: $light;
+    cursor: pointer;
+    border-bottom: 1px solid $grey-8;
+    border-radius: 2px;
+    @include font(24px, 500, $lh-solid);
+    transition: $fade-link;
+
+    &:hover {
+        background-color: $brand;
+        color: $white;
+    }
+
+    &:last-child {
+        border: none;
+    }
+}
+
+.touch {
+    .map__controls {
+        display: none;
+    }
+}
