edit map | contact page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
         </div>
     </div>
     <div class="container">
-        <img class="post__img" src="/assets/img/{{ page.img }}.jpg" />
+        <img class="post__img" src="/assets/img/{{ page.img }}.jpg" alt="{{ page.img }}" />
     </div>
 </section>
 
