update img title | copy

--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,5 +1,5 @@
 <a class="tile" href="{{ entry.url }}">
-    <img class="tile__img" src="/assets/img/{{ entry.img }}-thumb.jpg" />
+    <img class="tile__img" src="/assets/img/{{ entry.img.url }}-thumb.jpg" />
     <header class="tile__header">
         <h3 class="tile__title">{{ entry.title }}</h3>
     </header>
