--- a/_sass/settings.fonts.scss
+++ b/_sass/settings.fonts.scss
@@ -17,6 +17,13 @@
 
 @font-face {
 	font-family: 'Ziris';
+	src: url('/assets/fonts/500i.ttf');
+	font-weight: 500;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Ziris';
 	src: url('/assets/fonts/600.ttf');
 	font-weight: 600;
 	font-style: normal;
