update intro__container padding

--- a/_sass/components.intro.scss
+++ b/_sass/components.intro.scss
@@ -33,9 +33,8 @@
     @include lg {
         display: flex;
         align-items: center;
-        padding-top: 0;
         margin-bottom: 0;
-        margin-left: $triple-gutter;
+        padding: 0 $triple-gutter;
     }
 }
 
