update mobile menu

--- a/_sass/components.buttons.scss
+++ b/_sass/components.buttons.scss
@@ -37,7 +37,7 @@
 
     @media (max-width: 359px) {
         border: none !important;
-        padding: initial;
+        padding: 9px 0 12px;
     }
 
     @include lg {
