adjust section padding | add $var to scss

--- a/_sass/components.courses.scss
+++ b/_sass/components.courses.scss
@@ -1,7 +1,7 @@
 // courses
 // --------------------------------------------------
 .courses {
-    padding-top: 100px;
+    padding-top: $section-padding-s - 6;
 }
 
 .courses__title {
