--- a/_sass/objects.layout.scss
+++ b/_sass/objects.layout.scss
@@ -23,10 +23,10 @@
 }
 
 .section {
-    padding: 100px 0;
+    padding: $section-padding-s 0;
 
     @include sm {
-        padding: 128px 0;
+        padding: $section-padding-l 0;
     }
 }
 
