--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -97,3 +97,5 @@ $text-shadow-3: 			1px 1px 0 rgba($black, 0.35), 0 0 30px rgba($black, 0.25);
 --------------------*/
 
 $header-height: 80px;
+$section-padding-s: 116px;
+$section-padding-l: 128px;
