adding animations to home / cursussen

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header {{ page.header }}">
+<header class="header {{ page.header }} a a-fi-down a-del-150">
     <div class="container header__container">
         <a href="/">
             <div class="header__logo">
