--- a/_includes/courses__category.html
+++ b/_includes/courses__category.html
@@ -1,5 +1,7 @@
 <section class="courses__category">
-    <h2 class="courses__category-title">{{ include.category }}</h2>
+    <header class="js-scroll-magic" hook="0.92">
+        <h2 class="courses__category-title tr-stag js-tr">{{ include.category }}</h2>
+    </header>
     <div class="courses__grid">
         {% for entry in category %}
         {% include tile.html %}
