--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        ziris – alle rechten voorbehouden © 2019
+        ziris – alle rechten voorbehouden – © 2019
     </div>
 </footer>
