--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,10 +1,12 @@
-<a class="tile" href="{{ entry.url }}">
-    <img class="tile__img" src="/assets/img/{{ entry.img.url }}-thumb.jpg" />
-    <header class="tile__header">
-        <h3 class="tile__title">{{ entry.title }}</h3>
-    </header>
-    <div class="tile__txt">
-        <div class="tile__amount">{{ entry.amount }}</div>
-        <p class="tile__description">{{ entry.description }}</p>
+<a class="tile js-scroll-magic" hook="0.94" href="{{ entry.url }}">
+    <img class="tile__img tr-stag js-tr" src="/assets/img/{{ entry.img.url }}-thumb.jpg" />
+    <div class="bg-light tr-stag js-tr">
+        <header class="tile__header">
+            <h3 class="tile__title tr-stag js-tr">{{ entry.title }}</h3>
+        </header>
+        <div class="tile__txt tr-stag js-tr">
+            <div class="tile__amount tr-stag js-tr">{{ entry.amount }}</div>
+            <p class="tile__description tr-stag js-tr">{{ entry.description }}</p>
+        </div>
     </div>
 </a>
