adding animation to: contact / post / about

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,6 @@
-<section class="meta">
+<section class="meta js-scroll-magic">
     <div class="container container--m">
-        <div class="meta__container">
+        <div class="meta__container tr-stag js-tr">
             {% include meta__row.html label='aantal' entry='amount' %}
             {% include meta__row.html label='prijs' entry='price' %}
             {% if page.inc %}
