--- a/_includes/meta__row.html
+++ b/_includes/meta__row.html
@@ -1,4 +1,4 @@
-<div class="meta__row">
+<div class="meta__row tr-stag js-tr">
     <p class="meta__data-label">{{ include.label }}</p>
     <p class="meta__data-entry js-set-data" id="course-{{ include.entry }}">
         {% capture entry %}{{ include.entry }}{% endcapture %}
