--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,12 +5,12 @@ layout: default
 <section class="section">
     <div class="container">
         <div class="about__container">
-            <header class="about__header">
+            <header class="about__header a a-fi">
                 <h1 class="about__title">
                     {{ page.title }}
                 </h1>
             </header>
-            <div class="about__content">
+            <div class="about__content a a-fi a-del-250">
                 {{ content }}
             </div>
         </div>
