--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,14 +1,16 @@
-<section class="cta">
+<section class="cta js-scroll-magic tr-stag js-tr" hook="0.8">
     <div class="container container--s">
         <header>
-            <label class="cta__label">schrijf je in voor:</label>
-            <h3 class="cta__title">{{ page.title }}</h3>
-            <p class="cta__description mb-6">
+            <label class="cta__label tr-stag js-tr">schrijf je in voor:</label>
+            <h3 class="cta__title tr-stag js-tr">{{ page.title }}</h3>
+            <p class="cta__description mb-6 tr-stag js-tr">
                 de inschrijving is vrijblijvend en je kan altijd weer annuleren
             </p>
-            <a href="/inschrijven" class="button button--l">
-                ja ik wil inschrijven
-            </a>
+            <div class="tr-stag js-tr">
+                <a href="/inschrijven" class="button button--l">
+                    ja ik wil inschrijven
+                </a>
+            </div>
         </header>
     </div>
 </section>
