add all animations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer a a-fi-up a-del-300">
     <div class="container">
         ziris – alle rechten voorbehouden – © 2019
     </div>
