--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,9 @@ layout: default
             </div>
         </div>
     </div>
-    <div class="container js-scroll-magic" hook="0.9">
-        <img class="post__img tr-stag js-tr" src="/assets/img/{{ page.img.url }}.jpg" alt="{{ page.img.caption }}" title="{{ page.img.caption }}" />
-        <figcaption class="tr-stag js-tr">{{ page.img.caption }}</figcaption>
+    <div class="container">
+        <img class="post__img js-scroll-magic tr-stag js-tr" src="/assets/img/{{ page.img.url }}.jpg" alt="{{ page.img.caption }}" title="{{ page.img.caption }}" hook="0.9" />
+        <figcaption class="js-scroll-magic tr-stag js-tr" hook="0.95">{{ page.img.caption }}</figcaption>
     </div>
 </section>
 
