--- a/_sass/components.intro.scss
+++ b/_sass/components.intro.scss
@@ -8,6 +8,7 @@
     @include lg {
         display: flex;
         position: relative;
+        justify-content: space-between;
         height: 100vh;
         background-color: $light;
     }
@@ -58,7 +59,6 @@
     @include lg {
         display: flex;
         align-items: center;
-        justify-content: flex-end;
         width: 60%;
         padding: 0;
     }
@@ -66,6 +66,13 @@
 
 .intro__img {
     object-fit: cover;
+    width: 100%;
+    height: 75vw;
+
+    @include sm {
+        width: auto;
+        height: auto;
+    }
 
     @include lg {
         width: 100%;
