--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,8 +16,8 @@ layout: default
         </div>
     </div>
     <div class="container">
-        <img class="post__img js-scroll-magic tr-stag js-tr" src="{{ page.img.url }}" alt="{{ page.img.caption }}" title="{{ page.img.caption }}" hook="0.9" />
-        <figcaption class="js-scroll-magic tr-stag js-tr" hook="0.95">{{ page.img.caption }}</figcaption>
+        <img class="post__img js-scroll-magic tr-stag js-tr" src="{{ page.img }}" alt="{{ page.caption }}" hook="0.9" />
+        <figcaption class="js-scroll-magic tr-stag js-tr" hook="0.95">{{ page.caption }}</figcaption>
     </div>
 </section>
 
