add extra type field | convince field

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,9 @@
 <section class="meta js-scroll-magic">
     <div class="container container--m">
         <div class="meta__container tr-stag js-tr">
+            {% if page.type %}
+                {% include meta__row.html label='type les' entry='type' %}
+            {% endif %}
             {% include meta__row.html label='aantal' entry='amount' %}
             {% include meta__row.html label='prijs' entry='price' %}
             {% if page.inc %}
