--- a/_sass/components.tile.scss
+++ b/_sass/components.tile.scss
@@ -37,6 +37,14 @@
     }
 }
 
+.tile__type {
+    display: inline-block;
+    padding: 2px 6px 3px;
+    background-color: $brand;
+    @include font(14px, 700, $lh-copy);
+    color: $light;
+}
+
 .tile__amount {
     margin-bottom: 8px;
     @include font(12px, 700, $lh-title);
