--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -4,7 +4,7 @@
             <label class="cta__label tr-stag js-tr">schrijf je in voor:</label>
             <h3 class="cta__title tr-stag js-tr">{{ page.title }}</h3>
             <p class="cta__description tr-stag js-tr">
-                De inschrijving is vrijblijvend. De betaling is uiterlijk een week voor de start van de cursus.
+                {{ site.data.convince.text }}
             </p>
             <div class="mt-6 tr-stag js-tr">
                 <a href="/inschrijven" class="button button--l">
