change "type" to "soort"

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,7 +2,7 @@
     <div class="container container--m">
         <div class="meta__container tr-stag js-tr">
             {% if page.type %}
-                {% include meta__row.html label='type les' entry='type' %}
+                {% include meta__row.html label='soort les' entry='type' %}
             {% endif %}
             {% include meta__row.html label='aantal' entry='amount' %}
             {% include meta__row.html label='prijs' entry='price' %}
