--- a/_includes/tile.html
+++ b/_includes/tile.html
@@ -1,10 +1,12 @@
 <a class="tile js-scroll-magic" hook="0.94" href="{{ entry.url }}">
-    <img class="tile__img tr-stag js-tr" src="{{ entry.thumb }}" />
+    <figure class="tile__img-container tr-stag js-tr">
+        <img class="tile__img" src="{{ entry.thumb }}" />
+        {% if entry.type %}
+            <div class="tile__type">{{ entry.type }}</div>
+        {% endif %}
+    </figure>
     <div class="tile__bg tr-stag js-tr">
         <header class="tile__header">
-            {% if entry.type %}
-                <div class="tile__type tr-stag js-tr">{{ entry.type }}</div>
-            {% endif %}
             <h3 class="tile__title tr-stag js-tr">{{ entry.title }}</h3>
         </header>
         <div class="tile__txt tr-stag js-tr">
