TDH: update .button--header

--- a/_sass/components.buttons.scss
+++ b/_sass/components.buttons.scss
@@ -38,6 +38,11 @@
     @media (max-width: 359px) {
         border: none !important;
         padding: 9px 0 12px;
+
+        &:hover {
+            background-color: transparent;
+            color: $light;
+        }
     }
 
     @include lg {
