--- a/_sass/components.header.scss
+++ b/_sass/components.header.scss
@@ -72,14 +72,17 @@
     .button--header {
         border: 1px solid $brand;
         color: $brand;
-    }
-}
 
-.no-touch {
-    .header--white {
-        .button--header:hover {
+        &:hover {
             background-color: $brand;
             color: $light;
+        }
+
+        @media (max-width: 359px) {    
+            &:hover {
+                background-color: transparent;
+                color: $brand;
+            }
         }
     }
 }
@@ -102,14 +105,17 @@
     .button--header {
         border: 1px solid $light;
         color: $light;
-    }
-}
 
-.no-touch {
-    .header--brand {
-        .button--header:hover {
+        &:hover {
             background-color: $light;
             color: $brand;
+        }
+
+        @media (max-width: 359px) {    
+            &:hover {
+                background-color: transparent;
+                color: $light;
+            }
         }
     }
 }
