--- a/_sass/components.post.scss
+++ b/_sass/components.post.scss
@@ -67,12 +67,17 @@
         @include font(20px, 900, $lh-copy);
     }
 
-    ul {
+    ul, ol {
+        list-style-position: inside;
         @include font(16px, 500, $lh-copy);
 
         @include sm {
             font-size: calculate-rem(18px);
         }
+    }
+
+    ul {
+        list-style-type: disc;
     }
 
     li {
